# cpp-simple-tracer

./: .clang-format  CMakeLists.txt  LICENSE  README.md  conanfile.txt  test.cpp
lib/: CMakeLists.txt
lib/include/: cpp_tracing.h
